fixing navbar on mobile

--- a/styles/header_style.css
+++ b/styles/header_style.css
@@ -20,6 +20,7 @@
     font-family: 'Kaushan Script', sans-serif;
     font-size: 18px;
     font-color:white;
+    padding-bottom:10px;
 }
 .navbar .navbar-brand {
     padding-top: 0px;
